syntax = "proto3";

package saga;
option go_package = "github.com/Finciero/opendata/gemini/saga";

service Service {
  rpc GetBalance (Request) returns (Response);
}

message Request {
  string account_id = 1;
  string reference_id = 2;
  string user_id = 3;
}

message Response {
  int32 status_code = 1;
  Balance balance = 2;
}

message Balance {
  string account_id = 1;
  string user_id = 2;
  float balance = 3;
}
